--- a/index.html
+++ b/index.html
@@ -4,29 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Alphabet Adventure</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dnd/14.0.2/dist/ReactDnD.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dnd-html5-backend/14.0.0/ReactDnDHTML5Backend.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <style>
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0px); }
-        }
-        .animate-float {
-            animation: float 3s ease-in-out infinite;
-        }
-    </style>
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
     <script type="text/babel">
-        const { useState, useEffect } = React;
-        const { DndProvider, useDrag, useDrop } = ReactDnD;
-        const HTML5Backend = ReactDnDHTML5Backend;
+        const { useState } = React;
 
         const emojiMap = {
             A: '🍎', B: '🍌', C: '🐱', D: '🐶', E: '🐘', F: '🐸', G: '🦒', H: '🏠', I: '🍦',
@@ -34,58 +20,87 @@
             S: '🐍', T: '🌳', U: '☂️', V: '🚐', W: '🌊', X: '❌', Y: '😋', Z: '🦓'
         };
 
-        const Button = ({ children, onClick, className, disabled }) => (
+        const Button = ({ children, onClick, className }) => (
             <button
                 onClick={onClick}
-                className={`${className} ${disabled ? 'opacity-50 cursor-not-allowed' : ''}`}
-                disabled={disabled}
+                className={`${className} py-2 px-4 rounded-full font-bold`}
             >
                 {children}
             </button>
         );
 
-        // ... [LandingPage, Stage1, Stage2, Stage3 components remain the same] ...
-
-        const GameComplete = ({ score, onRestart }) => (
-            <div className="min-h-screen bg-gradient-to-r from-yellow-300 to-red-300 flex flex-col items-center justify-center p-4">
+        const LandingPage = ({ onStartGame }) => (
+            <div className="min-h-screen bg-gradient-to-r from-pink-300 to-purple-300 flex flex-col items-center justify-center p-4">
                 <h1 className="text-4xl md:text-6xl font-bold text-white mb-8 text-center">
-                    Congratulations!
+                    Emoji Alphabet Adventure
                 </h1>
-                <p className="text-2xl text-white mb-4">
-                    You've completed the Emoji Alphabet Adventure!
-                </p>
-                <p className="text-3xl font-bold text-white mb-8">
-                    Your final score: {score} / 10
-                </p>
                 <Button 
-                    className="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-2xl shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
-                    onClick={onRestart}
+                    className="bg-yellow-400 hover:bg-yellow-500 text-gray-800 text-xl shadow-lg transition duration-300 ease-in-out transform hover:scale-105"
+                    onClick={onStartGame}
                 >
-                    PLAY AGAIN
+                    Start Game
                 </Button>
             </div>
         );
 
+        const Stage1 = ({ onComplete }) => {
+            const [revealedLetters, setRevealedLetters] = useState([]);
+            const [currentLetter, setCurrentLetter] = useState(null);
+            const alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.split('');
+
+            const handleLetterClick = (letter) => {
+                if (!revealedLetters.includes(letter)) {
+                    setCurrentLetter(letter);
+                    setRevealedLetters([...revealedLetters, letter]);
+                }
+            };
+
+            return (
+                <div className="min-h-screen bg-gradient-to-r from-blue-300 to-purple-300 p-8">
+                    <h2 className="text-4xl font-bold text-center mb-8 text-white">Find the Emojis</h2>
+                    
+                    <div className="grid grid-cols-4 sm:grid-cols-6 md:grid-cols-8 lg:grid-cols-10 gap-4 mb-8">
+                        {alphabet.map((letter) => (
+                            <Button
+                                key={letter}
+                                onClick={() => handleLetterClick(letter)}
+                                className={`w-16 h-16 text-2xl ${
+                                    revealedLetters.includes(letter) ? 'bg-green-500' : 'bg-blue-500'
+                                } text-white`}
+                            >
+                                {revealedLetters.includes(letter) ? emojiMap[letter] : letter}
+                            </Button>
+                        ))}
+                    </div>
+
+                    {currentLetter && (
+                        <div className="text-center text-4xl font-bold text-white">
+                            {currentLetter} is for {emojiMap[currentLetter]}
+                        </div>
+                    )}
+
+                    <div className="mt-8 text-center">
+                        <Button
+                            onClick={onComplete}
+                            className="bg-yellow-400 hover:bg-yellow-500 text-gray-800 text-xl"
+                        >
+                            {revealedLetters.length === alphabet.length ? "Finish" : `${revealedLetters.length}/${alphabet.length} Found`}
+                        </Button>
+                    </div>
+                </div>
+            );
+        };
+
         const App = () => {
             const [gameState, setGameState] = useState('landing');
-            const [finalScore, setFinalScore] = useState(0);
 
             const startGame = () => setGameState('stage1');
-            const goToStage2 = () => setGameState('stage2');
-            const goToStage3 = () => setGameState('stage3');
-            const completeGame = (score) => {
-                setFinalScore(score);
-                setGameState('complete');
-            };
-            const restartGame = () => setGameState('landing');
+            const finishGame = () => setGameState('landing');
 
             return (
                 <div>
                     {gameState === 'landing' && <LandingPage onStartGame={startGame} />}
-                    {gameState === 'stage1' && <Stage1 onComplete={goToStage2} />}
-                    {gameState === 'stage2' && <Stage2 onComplete={goToStage3} />}
-                    {gameState === 'stage3' && <Stage3 onComplete={completeGame} />}
-                    {gameState === 'complete' && <GameComplete score={finalScore} onRestart={restartGame} />}
+                    {gameState === 'stage1' && <Stage1 onComplete={finishGame} />}
                 </div>
             );
         };
