--- a/index.html
+++ b/index.html
@@ -17,6 +17,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ABCmoji</title>
+    <!-- SEO meta tags -->
+<meta name="description" content="ABCmoji is a free, fun educational game for children to learn the alphabet and improve English skills through emoji matching. Perfect for preschoolers and early learners!">
+<meta name="keywords" content="alphabet game, learn ABC, children's education, free kids game, English learning, fun educational game, emoji game, preschool learning">
+
+<!-- Open Graph tags for social media sharing -->
+<meta property="og:title" content="ABCmoji - Fun Alphabet Learning Game for Kids">
+<meta property="og:description" content="Help your child learn the alphabet with this free, fun emoji-matching game! Great for preschoolers and early English learners.">
+<meta property="og:image" content="https://yourdomain.com/abcmoji-preview.jpg">
+<meta property="og:url" content="https://yourdomain.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="ABCmoji - Fun Alphabet Learning Game for Kids">
+<meta name="twitter:description" content="Help your child learn the alphabet with this free, fun emoji-matching game! Great for preschoolers and early English learners.">
+<meta name="twitter:image" content="https://yourdomain.com/abcmoji-preview.jpg">
+
+<!-- Structured data for rich snippets -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "ABCmoji",
+  "url": "https://yourdomain.com",
+  "description": "A free, fun educational game for children to learn the alphabet and improve English skills through emoji matching.",
+  "applicationCategory": "EducationalApplication",
+  "operatingSystem": "Any",
+  "offers": {
+    "@type": "Offer",
+    "price": "0"
+  },
+  "audience": {
+    "@type": "PeopleAudience",
+    "suggestedMinAge": "3",
+    "suggestedMaxAge": "8"
+  }
+}
+</script>
     <style>
         body {
             font-family: Arial, sans-serif;
